ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-ingress
  namespace: projects
  annotations:
    kubernetes.io/ingress.class: 'traefik'
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/places
            pathType: Prefix
            backend:
              service:
                name: helsinki-places-api-svc
                port:
                  number: 5000
